# xcanvas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  environment.yml  pytest.ini  xcanvasConfig.cmake.in
.binder/: environment.yml
.github/workflows/: main.yml
examples/: xcanvas.ipynb
include/xcanvas/: xcanvas.hpp  xcanvas_config.hpp  xcanvas_config_cling.hpp.in
src/: xcanvas.cpp
